[gd_scene load_steps=25 format=3]

[ext_resource type="Script" path="res://Scenes/GameModes/UIHandler.gd" id="1_yocbo"]
[ext_resource type="PackedScene" uid="uid://b6nccrbah3eqv" path="res://GameObjects/Bird/Bird.tscn" id="2_6agbg"]
[ext_resource type="AudioStream" uid="uid://cc1jms5ecphpa" path="res://Music/GuanoRemakeBGM1.ogg" id="3_ra3xn"]
[ext_resource type="PackedScene" uid="uid://ba40nt4sg0qam" path="res://GameObjects/Roads/RoadSpawner.tscn" id="4_p761u"]
[ext_resource type="PackedScene" uid="uid://jexburvvu6qg" path="res://GameObjects/Roads/Road.tscn" id="5_vtbg3"]
[ext_resource type="PackedScene" uid="uid://dcvl7p84hhypb" path="res://GameObjects/Clouds/CloudSpawner.tscn" id="6_e18xr"]
[ext_resource type="PackedScene" uid="uid://dgdvvad001x8" path="res://GameObjects/Clouds/Cloud2.tscn" id="7_2hmh4"]
[ext_resource type="PackedScene" uid="uid://ho8kr7jllvqv" path="res://GameObjects/Clouds/Cloud3.tscn" id="8_is04b"]
[ext_resource type="PackedScene" uid="uid://b8x60ftyn8tub" path="res://GameObjects/Clouds/Cloud1.tscn" id="9_1f442"]
[ext_resource type="Script" path="res://Scenes/GameModes/HitmanManager.gd" id="10_ds2ar"]
[ext_resource type="PackedScene" uid="uid://cpa2hvc8g0qew" path="res://GameObjects/Targets/TargetSpawner.tscn" id="10_sp523"]
[ext_resource type="PackedScene" uid="uid://dk2fhwtiyx2vf" path="res://GameObjects/Targets/BadBird.tscn" id="11_3yr4x"]
[ext_resource type="PackedScene" uid="uid://bgmlh00ibo5su" path="res://GameObjects/Targets/Bread.tscn" id="12_mvti6"]
[ext_resource type="PackedScene" uid="uid://sgpx8e600jyo" path="res://GameObjects/Targets/Man.tscn" id="13_dax2a"]
[ext_resource type="PackedScene" uid="uid://dwcuvjrb08hmr" path="res://GameObjects/Targets/OldLady.tscn" id="14_wukad"]
[ext_resource type="PackedScene" uid="uid://dxo64ti5br6gt" path="res://GameObjects/Targets/Skater.tscn" id="15_7n61d"]
[ext_resource type="PackedScene" uid="uid://btupy7dgeaa3p" path="res://GameObjects/Targets/Woman.tscn" id="16_sy8gu"]
[ext_resource type="PackedScene" uid="uid://b1t5cb853qjhv" path="res://GameObjects/Targets/Bicycle.tscn" id="17_0bbam"]
[ext_resource type="PackedScene" uid="uid://b4g3871mlu5h3" path="res://GameObjects/Targets/Bus.tscn" id="18_mj66x"]
[ext_resource type="PackedScene" uid="uid://dg2of8shkrpao" path="res://GameObjects/Targets/Car1.tscn" id="19_a4lpt"]
[ext_resource type="PackedScene" uid="uid://dmtsthotxx3o8" path="res://GameObjects/Targets/Car2.tscn" id="20_w17vl"]
[ext_resource type="PackedScene" uid="uid://nyvfjh2ulqon" path="res://GameObjects/Targets/Car3.tscn" id="21_libps"]
[ext_resource type="PackedScene" uid="uid://b1sakvb7d0ojp" path="res://GameObjects/Targets/Van.tscn" id="22_a287b"]
[ext_resource type="FontFile" uid="uid://cql18wfhkqirx" path="res://Fonts/PRESSSTART2P.TTF" id="23_ipju3"]

[node name="Game" type="Node2D"]
script = ExtResource("1_yocbo")

[node name="Bird" parent="." instance=ExtResource("2_6agbg")]
unique_name_in_owner = true
position = Vector2(143, 123)
mode = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ra3xn")
autoplay = true

[node name="Roads" type="Node2D" parent="."]
position = Vector2(0, 4)

[node name="RoadSpawner" parent="Roads" instance=ExtResource("4_p761u")]
position = Vector2(3000, 475)

[node name="Road" parent="Roads" instance=ExtResource("5_vtbg3")]
position = Vector2(602, 475)

[node name="Road2" parent="Roads" instance=ExtResource("5_vtbg3")]
position = Vector2(1802, 475)

[node name="Clouds" type="Node2D" parent="."]

[node name="CloudSpawners" type="Node2D" parent="Clouds"]

[node name="CloudSpawnerTop" parent="Clouds/CloudSpawners" instance=ExtResource("6_e18xr")]
position = Vector2(2056, 70)

[node name="CloudSpawnerBottom" parent="Clouds/CloudSpawners" instance=ExtResource("6_e18xr")]
position = Vector2(2210, 233)

[node name="Cloud1" parent="Clouds" instance=ExtResource("7_2hmh4")]
position = Vector2(752, 67)

[node name="Cloud2" parent="Clouds" instance=ExtResource("8_is04b")]
position = Vector2(1024, 190)

[node name="Cloud3" parent="Clouds" instance=ExtResource("9_1f442")]
position = Vector2(384, 183)

[node name="Cloud4" parent="Clouds" instance=ExtResource("9_1f442")]
position = Vector2(1330, 104)

[node name="Cloud5" parent="Clouds" instance=ExtResource("8_is04b")]
position = Vector2(1809, 289)

[node name="Cloud6" parent="Clouds" instance=ExtResource("7_2hmh4")]
position = Vector2(1680, 109)

[node name="Targets" type="Node2D" parent="."]
script = ExtResource("10_ds2ar")

[node name="TargetSpawnerSky" parent="Targets" instance=ExtResource("10_sp523")]
position = Vector2(2638, 280)
cooldown_min = 10
cooldown_max = 20
targets = [ExtResource("11_3yr4x")]

[node name="TargetSpawnerSidewalkTop" parent="Targets" instance=ExtResource("10_sp523")]
position = Vector2(2344, 586)
targets = [ExtResource("12_mvti6"), ExtResource("13_dax2a"), ExtResource("14_wukad"), ExtResource("15_7n61d"), ExtResource("16_sy8gu")]

[node name="TargetSpawnerCycleLane" parent="Targets" instance=ExtResource("10_sp523")]
position = Vector2(2604, 662)
targets = [ExtResource("17_0bbam")]

[node name="TargetSpawnerRoadTop" parent="Targets" instance=ExtResource("10_sp523")]
position = Vector2(2008, 737)
targets = [ExtResource("18_mj66x"), ExtResource("19_a4lpt"), ExtResource("20_w17vl"), ExtResource("21_libps"), ExtResource("22_a287b")]

[node name="TargetSpawnerRoadBottom" parent="Targets" instance=ExtResource("10_sp523")]
position = Vector2(2321, 880)
targets = [ExtResource("18_mj66x"), ExtResource("19_a4lpt"), ExtResource("20_w17vl"), ExtResource("21_libps"), ExtResource("22_a287b")]

[node name="TargetSpawnerSidewalkBottom" parent="Targets" instance=ExtResource("10_sp523")]
position = Vector2(1944, 1013)
targets = [ExtResource("12_mvti6"), ExtResource("13_dax2a"), ExtResource("14_wukad"), ExtResource("15_7n61d"), ExtResource("16_sy8gu")]

[node name="MarkTimer" type="Timer" parent="Targets"]
wait_time = 6.0
autostart = true

[node name="ScoreLabel" type="Label" parent="."]
visible = false
offset_left = -500.0
offset_top = -500.0
offset_right = -372.0
offset_bottom = -481.0
theme_override_fonts/font = ExtResource("23_ipju3")
text = "Score: ?"
vertical_alignment = 1

[node name="AmmoLabel" type="Label" parent="."]
offset_left = 23.0
offset_top = 24.0
offset_right = 135.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("23_ipju3")
text = "Ammo: ?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StreakLabel" type="Label" parent="."]
offset_left = 191.0
offset_top = 24.0
offset_right = 335.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("23_ipju3")
text = "Streak: ?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MultiplierLabel" type="Label" parent="."]
visible = false
offset_left = -500.0
offset_top = -500.0
offset_right = -276.0
offset_bottom = -481.0
theme_override_fonts/font = ExtResource("23_ipju3")
text = "Multiplier: x?"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="rewards_collected" from="Bird" to="." method="_on_bird_rewards_collected"]
[connection signal="shot_fired" from="Bird" to="." method="_on_bird_shot_fired"]
[connection signal="streak_broken" from="Bird" to="." method="_on_bird_streak_broken"]
[connection signal="timeout" from="Targets/MarkTimer" to="Targets" method="_on_mark_timer_timeout"]
